apps/base/auth-phpldapadmin/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app.kubernetes.io/component: phpldapadmin
    app.kubernetes.io/name: phpldapadmin
