apps/base/auth-phpldapadmin/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpldapadmin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Auth
    gethomepage.dev/name: Php LDAP Admin
    gethomepage.dev/description: Web-based LDAP browser
    gethomepage.dev/icon: phpldapadmin
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=phpldapadmin"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - phpldapadmin.auth.intra.web_domain_name
      secretName: opensslpki-ingress-tls
  rules:
  - host: phpldapadmin.auth.intra.web_domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpldapadmin
            port:
              name: http
