apps/base/auth-phpldapadmin/deploy/networkPolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-phpldapadmin
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/component: phpldapadmin
      app.kubernetes.io/name: phpldapadmin
    
  ingress:
    # Allow from the ingress controller
    - ports:
        - port: http
      from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
